--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -184,3 +184,222 @@
 .visible{
     visibility: visible;
 }
+
+/* effect items hover */
+.itemHot__title, .itemHot__imgWrap img{
+    transition: all linear 0.4s;
+}
+
+.itemsHot__wrap li:hover .itemHot__title{
+    color: #EA8025;
+}
+
+
+.itemsHot__wrap li:hover .itemHot__imgWrap img{
+    transform: scale(1.2);
+}
+
+/* cart */
+.btn__cart{
+    width: 60px;
+    height: 60px;
+    position: fixed;
+    z-index: 999;
+    bottom: 100px;
+    right: 50px;
+    background-color: #EA8025;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 2px 2px 8px;
+    animation: btnCart 4s ease-in-out infinite;
+    user-select: none;
+}
+
+#cart__logo{
+    width: 100%;
+    height: 100%;
+    font-size: 24px;
+    text-align: center;
+    line-height: 60px;
+    color: #fff;
+}
+
+/* animation cart :v large - small*/
+@keyframes btnCart {
+    0%{
+        transform: scale(1);
+    }
+    25%{
+        transform: scale(1.1);
+    }
+    50%{
+        transform: scale(1);
+    }
+    75%{
+        transform: scale(1.1);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+.cart__sidebar{
+    width: 400px;
+    background-color: #FFF7E6;
+    color: #ccc;
+    position: fixed;
+    top: calc(60px + 1.25%);
+    /* right: 0; */
+    /* thêm 5px do box-shadow */
+    right: -405px;
+    bottom: calc(160px + 2.5%);
+    z-index: 999;    
+    padding: 5px;
+    box-shadow: 0 0 1px #000, 0 0 1px #000, 0 0 8px #000;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+.cart__sidebar-overlay{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.cart__title{
+    padding: 10px 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    user-select: none;
+}
+
+.cart__title-text{
+    font-size: 16px;    
+    user-select: none;
+    font-weight: 500;
+    color: #000;
+}
+
+.cart__btnClose i{
+    font-size: 24px;
+    color: red;
+    padding: 8px;
+    transition: all linear 0.5s;
+}
+
+.cart__btnClose:hover i{
+    transform: rotate(360deg);
+}
+
+.cart__list{
+    list-style-type: none;
+    background-color: #FFF7E6;
+    height: calc(510px - 10px - 42px - 30px - 15px);
+    overflow-y: scroll;
+    overflow-x: hidden;  
+}
+
+/* css scroll */
+.cart__list::-webkit-scrollbar{
+    width: 5px;
+}
+
+.cart__list::-webkit-scrollbar-thumb{
+    background-color: #cfc8bc;
+    border-radius: 10px;
+}
+
+.cart__list::-webkit-scrollbar-thumb:hover{
+    background-color: #faf9fa;
+}
+
+.cart__list li{
+    padding: 10px 8px;
+}
+
+/* hover items cart */
+.cart__list li:hover{
+    background-color: #f7f7f7;
+}
+
+.cart__list li:hover img{
+    transform: scale(1.3);
+}
+
+.cart__list a{
+    display: flex;
+    text-decoration: none;
+}
+
+.cart__imgWrap{
+    /* width: 15%; */
+    /* height: calc( (400px * 15%) / 100% ); */
+    height: 55px;
+    width: 55px;
+    overflow: hidden;
+}
+
+.cart__list img{
+    width: 100%;
+    height: 100%;
+    transition: all linear 0.5s;
+}
+
+.cart__info{
+    width: calc(85% - 8px);
+    margin-left: 8px;
+}
+
+.cart__info-title{
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 5px;
+    line-height: 16px;
+    color: #000;
+    text-transform: capitalize;
+}
+
+.cart__info-value{
+    width: 100%;
+    font-size: 14px;
+    font-weight: 400;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: #EA8025;
+}
+
+footer.cart__footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px 0 5px 0;
+    background-color: #FFF7E6;
+}
+
+.cart__footer-btnReset, .cart__footer-btnBuy{
+    width: 120px;
+    height: 30px;
+    background-color: #ea8025;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    border: #ea8025 1px solid;
+    border-radius: 10px;
+    line-height: 30px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.5s linear;
+}
+
+.cart__footer-btnReset:hover, .cart__footer-btnBuy:hover{
+    /* box-shadow: inset 120px 0 0 0 #fff; */
+    color: #ea8025;
+
+    background-color: #fff;
+}
+
