--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
     - story1.html
     - shop.html
 */
-
 *{
     margin: 0;
     padding: 0;
@@ -17,6 +16,7 @@
 
 #main{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: relative;
 }
 
 .header__wrap{
