--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -9,6 +9,7 @@
     bottom: 360px;
     z-index: 20;
     display: flex;
+    user-select: none;
 }
 
 .menu__Sidebar{
@@ -26,6 +27,7 @@
 .menu__listItems{
     list-style-type: none;
     padding-left: 50px;
+    user-select: none;
 }
 
 .menu__listItems{
@@ -253,6 +255,7 @@
     line-height: 35px;
     text-align: center;
     padding-left: 5px;
+    user-select: none;
 }
 
 #cart__logo{
@@ -304,6 +307,7 @@
     position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .cart__title{
@@ -377,6 +381,8 @@
 .cart__action {
     padding: 5px;
     color: #000;
+    cursor: pointer;
+    user-select: none;
 }
 
 .cart__imgWrap{
@@ -426,6 +432,7 @@ footer.cart__footer {
     justify-content: space-around;
     padding: 10px 0 5px 0;
     background-color: #FFF7E6;
+    user-select: none;
 }
 
 .cart__footer-btnReset, .cart__footer-btnBuy{
