--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,6 @@
 .poster{
     background: no-repeat center/cover url("/assets/img/poster.jpeg");
-    height: 400px;
+    /* height: 400px; */
     position: relative;
 }
 
