--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -57,9 +57,12 @@
     background-color: whitesmoke;
 }
 
-li{
-    list-style-type: none;
+#navbar li{
     margin-top: 20px;
+}
+
+ul{
+    list-style-type: none;
 }
 
 .poster img{
