--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,7 +1,12 @@
 .poster{
-    background: no-repeat center/cover url("/assets/img/poster.jpeg");
+    /* background: no-repeat center/cover url("/assets/img/poster.jpeg"); */
     height: 400px;
     position: relative;
+}
+
+.poster img{
+    width: 100%;
+    height: 100%;
 }
 
 /* items hot */
