--- a/assets/css/coffee.css
+++ b/assets/css/coffee.css
@@ -2,7 +2,7 @@
     /* background: no-repeat center/cover url("/assets/img/coffee-tea/coffee/slider-coffee.jpeg"); */
     height: 400px;
     position: relative;
-    /* margin-top: 60px; */
+    margin-top: 60px;
 }
 
 .poster img{
