Add: ajax, Fix: func showCart/resetCart/addToCart/countProducts in product-detail js -> php/ajax

--- a/assets/css/product-detail.css
+++ b/assets/css/product-detail.css
@@ -70,6 +70,7 @@
     border-radius: 10px;
     cursor: pointer;
     transition: all linear 0.5s;
+    user-select: none;
 }
 
 .product__btnCancel:hover, .product__btnAddToCart:hover{
