--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -402,6 +402,9 @@
 .cart__info{
     width: calc(85% - 8px);
     margin-left: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .cart__info-title{
@@ -421,6 +424,12 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     color: #EA8025;
+}
+
+.cart__info-count {
+    color: #000;
+    font-size: 14px;
+    font-weight: 500;
 }
 
 footer.cart__footer {
