Update : lam form thanh toan :v

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -486,3 +486,12 @@ footer.cart__footer {
     background-color: #fff;
 }
 
+.cart__footer-btnBuy a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.cart__footer-btnBuy:hover a{
+    color: #ea8025;
+}
+
